<resources>
    <string name="app_name">AndroidEnjoyer</string>
    <string name="let_s_get_acuqainted">Let\'s get acuqainted</string>
    <string name="fill_out_the_profile_and_go_to_the_application">Fill out the profile and go to the application!</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember me</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="by_clicking_register_you_agree_to_our_terms_and_conditions">By clicking Register you agree to our Terms and Conditions</string>
    <string name="register">REGISTER</string>
    <string name="or">or</string>
    <string name="google">Google</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="mykyta_fesenko">Mykyta Fesenko</string>
    <string name="career">Career</string>
    <string name="home_adress">Home Adress</string>
    <string name="view_my_contacts">VIEW MY CONTACTS</string>
    <string name="edit_profile">Edit profile</string>
    <string name="go_to_settings_and_fill_out_the_profile">Go to settings and fill out the profile</string>
</resources>